--- a/.github/workflows/build-libs.yml
+++ b/.github/workflows/build-libs.yml
@@ -47,14 +47,9 @@ jobs:
         with:
           vs-version: 'latest'
 
-      - name: Build OpenSSL and libssh2
+      - name: Post Setup MSBuild
         shell: pwsh
         run: |
-          $ErrorActionPreference = "Stop"
-          Set-StrictMode -Version Latest
-          $PSNativeCommandUseErrorActionPreference = $true
-          Set-PSDebug -Trace 1
-  
           $vsPath = & "${env:ProgramFiles(x86)}\Microsoft Visual Studio\Installer\vswhere.exe" `
             -latest -products * `
             -requires Microsoft.VisualStudio.Component.VC.Tools.x86.x64 `
@@ -65,66 +60,175 @@ jobs:
           }
 
           $vcvars = Join-Path $vsPath "VC\Auxiliary\Build\vcvarsall.bat"
+          "VCVARS_BAT=$vcvars" >> $env:GITHUB_ENV
 
-          $arches = @(
-            @{ Name = "x86"; VC = "x86"; OpenSSL = "VC-WIN32";  LibSSH2 = "Win32" },
-            @{ Name = "x64"; VC = "x64"; OpenSSL = "VC-WIN64A"; LibSSH2 = "x64" }
-          )
+          $logDir = "$env:GITHUB_WORKSPACE\logs"
+          New-Item -ItemType Directory -Force -Path $logDir | Out-Null
 
-          foreach ($a in $arches) {
-            $arch = $a.Name
-            $vc = $a.VC
-            $targetOpenSSL = $a.OpenSSL
-            $targetLibSSH2 = $a.LibSSH2
+      - name: Setup x86 environment
+        shell: pwsh
+        run: |
+          $arch = "x86"
+          $vcvars = $env:VCVARS_BAT
 
-            $logDir = "$env:GITHUB_WORKSPACE\logs"
-            New-Item -ItemType Directory -Force -Path $logDir | Out-Null
-
-            # --- OpenSSL ---
-            git clone --depth=1 --branch $env:OPENSSL_BRANCH $env:OPENSSL_REPO "openssl-$arch"
-
-            $opensslPrefix = "$env:GITHUB_WORKSPACE\deps\openssl\$arch"
-
-            cmd /c "`"$vcvars`" $vc && cd openssl-$arch && perl Configure $targetOpenSSL no-shared no-tests --prefix=$opensslPrefix /FS && jom /J 8 && jom install" `
-              2>&1 | Tee-Object "logs\openssl-$arch.log"
-
-            # --- libssh2 ---
-            curl.exe -LO "$($env:LIBSSH2_URL)/releases/download/libssh2-$($env:LIBSSH2_VERSION)/libssh2-$($env:LIBSSH2_VERSION).zip"
-            Set-PSDebug -Off
-            Expand-Archive ".\libssh2-$($env:LIBSSH2_VERSION).zip" -DestinationPath .
-            Rename-Item "libssh2-$($env:LIBSSH2_VERSION)" "libssh2-$arch"
-            Set-PSDebug -Trace 1
-            Push-Location "libssh2-$arch"
-
-            $libssh2Prefix = "$env:GITHUB_WORKSPACE\deps\libssh2\$arch"
-            cmake -S . -B build `
-              -DBUILD_SHARED_LIBS=OFF `
-              -DCRYPTO_BACKEND=OpenSSL `
-              -DOPENSSL_ROOT_DIR="$opensslPrefix" `
-              -DOPENSSL_INCLUDE_DIR="$opensslPrefix\include" `
-              -DOPENSSL_LIBRARIES="$opensslPrefix\lib" `
-              -DOPENSSL_CRYPTO_LIBRARY="$opensslPrefix\lib\libcrypto.lib" `
-              -DOPENSSL_SSL_LIBRARY="$opensslPrefix\lib\libssl.lib" `
-              -DOPENSSL_USE_STATIC_LIBS=ON `
-              -DCMAKE_INSTALL_PREFIX="$libssh2Prefix" `
-              -DCMAKE_GENERATOR="Visual Studio 17 2022" `
-              -D CMAKE_C_FLAGS_DEBUG="/MTd"  `
-              -D CMAKE_C_FLAGS_RELEASE="/MT" `
-              -D CMAKE_BUILD_TYPE=Release `
-              -D BUILD_EXAMPLES=OFF `
-              -D BUILD_TESTING=OFF `
-              -A $targetLibSSH2 `
-              2>&1 | Tee-Object "$logDir\libssh2-config-$arch.log"
-
-            cmake --build build --config Release --target install 2>&1 | Tee-Object "$logDir\libssh2-build-$arch.log"
-            Pop-Location
-
-            # 不要ファイル削除
-            Remove-Item "$opensslPrefix\bin","$opensslPrefix\html","$opensslPrefix\share","$opensslPrefix\lib\pkgconfig","$opensslPrefix\lib\engines*" -Recurse -Force -ErrorAction SilentlyContinue
-            Remove-Item "$libssh2Prefix\bin","$libssh2Prefix\share","$libssh2Prefix\lib\pkgconfig" -Recurse -Force -ErrorAction SilentlyContinue
+          cmd.exe /c "call `"$vcvars`" $arch && set > %temp%\vcvars.txt"
+          Get-Content "$env:temp\vcvars.txt" | Foreach-Object {
+            if ($_ -match "^(.*?)=(.*)$") {
+              $key=$matches[1].ToString()
+              $value=$matches[2].ToString()
+              echo "$key=$value" | Out-File -FilePath $Env:GITHUB_ENV -Encoding utf-8 -Append
+            }
           }
 
-      # --- キャッシュ保存 ---
+      - name: Build OpenSSL (x86)
+        shell: pwsh
+        run: |
+          $ErrorActionPreference = "Stop"
+          Set-StrictMode -Version Latest
+          $PSNativeCommandUseErrorActionPreference = $true
+          Set-PSDebug -Trace 1
+
+          $arch = "x86"
+          $targetOpenSSL = "VC-WIN32"
+          $logDir = "$env:GITHUB_WORKSPACE\logs"
+          $opensslPrefix = "$env:GITHUB_WORKSPACE\deps\openssl\$arch"
+
+          git clone --depth=1 --branch $env:OPENSSL_BRANCH $env:OPENSSL_REPO "openssl-$arch"
+
+          cd openssl-$arch
+          perl Configure $targetOpenSSL no-shared no-tests no-docs --prefix=$opensslPrefix /FS 2>&1 | Tee-Object "$logDir\openssl-config-$arch.log"
+          jom /J 8 2>&1 | Tee-Object -Append "$logDir\openssl-build-$arch.log"
+          nmake install 2>&1 | Tee-Object -Append "$logDir\openssl-build-$arch.log"
+
+          Remove-Item "$opensslPrefix\bin","$opensslPrefix\html","$opensslPrefix\share","$opensslPrefix\lib\pkgconfig","$opensslPrefix\lib\engines*" -Recurse -Force -ErrorAction SilentlyContinue
+
+      - name: Build libssh2 (x86)
+        shell: pwsh
+        run: |
+          $ErrorActionPreference = "Stop"
+          Set-StrictMode -Version Latest
+          $PSNativeCommandUseErrorActionPreference = $true
+          Set-PSDebug -Trace 1
+
+          $arch = "x86"
+          $targetLibSSH2 = "Win32"
+          $logDir = "$env:GITHUB_WORKSPACE\logs"
+          $opensslPrefix = "$env:GITHUB_WORKSPACE\deps\openssl\$arch"
+          $libssh2Prefix = "$env:GITHUB_WORKSPACE\deps\libssh2\$arch"
+
+          curl.exe -LO "$($env:LIBSSH2_URL)/releases/download/libssh2-$($env:LIBSSH2_VERSION)/libssh2-$($env:LIBSSH2_VERSION).zip"
+          Set-PSDebug -Off
+          Expand-Archive ".\libssh2-$($env:LIBSSH2_VERSION).zip" -DestinationPath .
+          Rename-Item "libssh2-$($env:LIBSSH2_VERSION)" "libssh2-$arch"
+          Set-PSDebug -Trace 1
+          Push-Location "libssh2-$arch"
+
+          cmake -S . -B build `
+            -DBUILD_SHARED_LIBS=OFF `
+            -DCRYPTO_BACKEND=OpenSSL `
+            -DOPENSSL_ROOT_DIR="$opensslPrefix" `
+            -DOPENSSL_INCLUDE_DIR="$opensslPrefix\include" `
+            -DOPENSSL_LIBRARIES="$opensslPrefix\lib" `
+            -DOPENSSL_CRYPTO_LIBRARY="$opensslPrefix\lib\libcrypto.lib" `
+             -DOPENSSL_SSL_LIBRARY="$opensslPrefix\lib\libssl.lib" `
+            -DOPENSSL_USE_STATIC_LIBS=ON `
+            -DCMAKE_INSTALL_PREFIX="$libssh2Prefix" `
+            -DCMAKE_GENERATOR="Visual Studio 17 2022" `
+            -D CMAKE_C_FLAGS_DEBUG="/MTd"  `
+            -D CMAKE_C_FLAGS_RELEASE="/MT" `
+            -D CMAKE_BUILD_TYPE=Release `
+            -D BUILD_EXAMPLES=OFF `
+            -D BUILD_TESTING=OFF `
+            -A $targetLibSSH2 `
+            2>&1 | Tee-Object "$logDir\libssh2-config-$arch.log"
+
+          cmake --build build --config Release --target install 2>&1 | Tee-Object "$logDir\libssh2-build-$arch.log"
+          Pop-Location
+
+          Remove-Item "$libssh2Prefix\bin","$libssh2Prefix\share","$libssh2Prefix\lib\pkgconfig" -Recurse -Force -ErrorAction SilentlyContinue
+
+      - name: Setup x64 environment
+        shell: pwsh
+        run: |
+          $arch = "x64"
+          $vcvars = $env:VCVARS_BAT
+
+          cmd.exe /c "call `"$vcvars`" $arch && set > %temp%\vcvars.txt"
+          Get-Content "$env:temp\vcvars.txt" | Foreach-Object {
+            if ($_ -match "^(.*?)=(.*)$") {
+              $key=$matches[1].ToString()
+              $value=$matches[2].ToString()
+              echo "$key=$value" | Out-File -FilePath $Env:GITHUB_ENV -Encoding utf-8 -Append
+            }
+          }
+
+      - name: Build OpenSSL (x64)
+        shell: pwsh
+        run: |
+          $ErrorActionPreference = "Stop"
+          Set-StrictMode -Version Latest
+          $PSNativeCommandUseErrorActionPreference = $true
+          Set-PSDebug -Trace 1
+
+          $arch = "x64"
+          $targetOpenSSL = "VC-WIN64A"
+          $logDir = "$env:GITHUB_WORKSPACE\logs"
+          $opensslPrefix = "$env:GITHUB_WORKSPACE\deps\openssl\$arch"
+
+          git clone --depth=1 --branch $env:OPENSSL_BRANCH $env:OPENSSL_REPO "openssl-$arch"
+
+          cd openssl-$arch
+          perl Configure $targetOpenSSL no-shared no-tests no-docs --prefix=$opensslPrefix /FS 2>&1 | Tee-Object "$logDir\openssl-config-$arch.log"
+          jom /J 8 2>&1 | Tee-Object -Append "$logDir\openssl-build-$arch.log"
+          nmake install 2>&1 | Tee-Object -Append "$logDir\openssl-build-$arch.log"
+
+          Remove-Item "$opensslPrefix\bin","$opensslPrefix\html","$opensslPrefix\share","$opensslPrefix\lib\pkgconfig","$opensslPrefix\lib\engines*" -Recurse -Force -ErrorAction SilentlyContinue
+
+      - name: Build libssh2 (x64)
+        shell: pwsh
+        run: |
+          $ErrorActionPreference = "Stop"
+          Set-StrictMode -Version Latest
+          $PSNativeCommandUseErrorActionPreference = $true
+          Set-PSDebug -Trace 1
+
+          $arch = "x64"
+          $targetLibSSH2 = "x64"
+          $logDir = "$env:GITHUB_WORKSPACE\logs"
+          $opensslPrefix = "$env:GITHUB_WORKSPACE\deps\openssl\$arch"
+          $libssh2Prefix = "$env:GITHUB_WORKSPACE\deps\libssh2\$arch"
+
+          curl.exe -LO "$($env:LIBSSH2_URL)/releases/download/libssh2-$($env:LIBSSH2_VERSION)/libssh2-$($env:LIBSSH2_VERSION).zip"
+          Set-PSDebug -Off
+          Expand-Archive ".\libssh2-$($env:LIBSSH2_VERSION).zip" -DestinationPath .
+          Rename-Item "libssh2-$($env:LIBSSH2_VERSION)" "libssh2-$arch"
+          Set-PSDebug -Trace 1
+          Push-Location "libssh2-$arch"
+
+          cmake -S . -B build `
+            -DBUILD_SHARED_LIBS=OFF `
+            -DCRYPTO_BACKEND=OpenSSL `
+            -DOPENSSL_ROOT_DIR="$opensslPrefix" `
+            -DOPENSSL_INCLUDE_DIR="$opensslPrefix\include" `
+            -DOPENSSL_LIBRARIES="$opensslPrefix\lib" `
+            -DOPENSSL_CRYPTO_LIBRARY="$opensslPrefix\lib\libcrypto.lib" `
+             -DOPENSSL_SSL_LIBRARY="$opensslPrefix\lib\libssl.lib" `
+            -DOPENSSL_USE_STATIC_LIBS=ON `
+            -DCMAKE_INSTALL_PREFIX="$libssh2Prefix" `
+            -DCMAKE_GENERATOR="Visual Studio 17 2022" `
+            -D CMAKE_C_FLAGS_DEBUG="/MTd"  `
+            -D CMAKE_C_FLAGS_RELEASE="/MT" `
+            -D CMAKE_BUILD_TYPE=Release `
+            -D BUILD_EXAMPLES=OFF `
+            -D BUILD_TESTING=OFF `
+            -A $targetLibSSH2 `
+            2>&1 | Tee-Object "$logDir\libssh2-config-$arch.log"
+
+          cmake --build build --config Release --target install 2>&1 | Tee-Object "$logDir\libssh2-build-$arch.log"
+          Pop-Location
+
+          Remove-Item "$libssh2Prefix\bin","$libssh2Prefix\share","$libssh2Prefix\lib\pkgconfig" -Recurse -Force -ErrorAction SilentlyContinue
+
       - name: Cache deps
         uses: actions/cache@v4
         with:
@@ -133,6 +237,7 @@ jobs:
 
       - name: Upload build artifacts
         uses: actions/upload-artifact@v4
+        if: always()
         with:
           name: openssl-libssh2-build-artifacts
           path: |
